# docurag-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: ci.yml
data/: docs.csv  qrels.csv
scripts/: run_baseline.sh
src/: __init__.py
src/chunk/: __init__.py  make_chunks.py
src/embed/: __init__.py
src/eval/: __init__.py
src/generate/: __init__.py
src/query_rewrite/: __init__.py
src/rerank/: __init__.py
src/retrieve/: __init__.py
tests/: conftest.py  test_retrieval.py
